--- a/app/src/main/res/layout/activity_main_acerca.xml
+++ b/app/src/main/res/layout/activity_main_acerca.xml
@@ -16,14 +16,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/sara" />
+        app:srcCompat="@drawable/sara"
+        android:contentDescription="@string/todo" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="Programador: ALEXEY SEMIONOV BOYKO"
+        android:text="@string/programador_alexey_semionov_boyko"
         android:textColor="#F3ECEC"
         android:textSize="14sp"
         android:textStyle="bold|italic"
@@ -38,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="8dp"
-        android:text="Ilustradora: SARA WAMBA"
+        android:text="@string/ilustradora_sara_wamba"
         android:textColor="#F3EFEF"
         android:textSize="14sp"
         android:textStyle="bold|italic"
@@ -50,9 +51,11 @@
         android:id="@+id/imageButton7"
         android:layout_width="158dp"
         android:layout_height="0dp"
+        android:contentDescription="@string/todo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textView6"
-        app:srcCompat="@drawable/ic_baseline_subdirectory_arrow_left_24" />
+        app:srcCompat="@drawable/ic_baseline_subdirectory_arrow_left_24"
+        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />
 
     <TextView
         android:id="@+id/textView6"
@@ -61,7 +64,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Icon made by Freepik, Dighital, Eucalyp, Pixel Perfect, photo3idea_studio from www.flaticon.com"
+        android:text="@string/icon_made_by_freepik_dighital_eucalyp_pixel_perfect_photo3idea_studio_from_www_flaticon_com"
         android:textColor="#F1EEEE"
         android:textSize="14sp"
         android:textStyle="bold|italic"
@@ -74,7 +77,7 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Graphic provided by:"
+        android:text="@string/graphic_provided_by"
         android:textColor="#FFFFFF"
         android:textSize="12sp"
         android:textStyle="italic"
@@ -89,11 +92,21 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:text="¡Bienvenidos a ¿Sabes dónde está?! \nCon esta aplicacion podrás disfrutar aprendiendo y jugando a ubicar los sitios mas increíbles del mundo de la manera fácil y sencilla. Una vez que presiones jugar y elijas el tema de las preguntas, tu solo tienes que pulsar donde crees que se encuentra ese lugar en el Google Maps y pulsar el botón ¡YA SÉ! entonces te pondrá una puntuación y los km que te has acercado a la respuesta correcta. ¡DIVIÉRTETE Y APRENDE!"
+        android:text="@string/bienvenidos_a_sabes_d_nde_est_ncon_esta_aplicacion_podr_s_disfrutar_aprendiendo_y_jugando_a_ubicar_los_sitios_mas_incre_bles_del_mundo_de_la_manera_f_cil_y_sencilla_una_vez_que_presiones_jugar_y_elijas_el_tema_de_las_preguntas_tu_solo_tienes_que_pulsar_donde_crees_que_se_encuentra_ese_lugar_en_el_google_maps_y_pulsar_el_bot_n_ya_s_entonces_te_pondr_una_puntuaci_n_y_los_km_que_te_has_acercado_a_la_respuesta_correcta_divi_rtete_y_aprende"
         android:textColor="#FFFFFF"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/textView7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="184dp"
+        android:layout_height="160dp"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/sa"
+        android:contentDescription="@string/todo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
