--- a/app/src/main/res/layout/activity_main_fragments_map.xml
+++ b/app/src/main/res/layout/activity_main_fragments_map.xml
@@ -8,17 +8,17 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/textView4"
-            android:layout_width="414dp"
+            android:id="@+id/preguntaEdit"
+            android:layout_width="0dp"
             android:layout_height="46dp"
             android:gravity="center"
-            android:text="¿DONDE  ESTAN LAS PIRAMIDES EGIPCIAS ?"
             android:textColor="#F6F1F1"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -32,19 +32,10 @@
             android:text="¡YA SÉ!"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.27"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView4" />
-
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:onClick="menu"
-            android:src="@drawable/ic_baseline_arrow_back_24"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/button3"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView4" />
+            app:layout_constraintTop_toBottomOf="@+id/preguntaEdit"
+            app:layout_constraintVertical_bias="0.0" />
 
         <ImageView
             android:id="@+id/imageView3"
@@ -70,5 +61,17 @@
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
         app:uiZoomControls="true"
         tools:context=".MapsActivity" />
+
+    <ImageButton
+        android:id="@+id/borrarButton"
+        android:layout_width="91dp"
+        android:layout_height="77dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="32dp"
+        android:background="#00F4F0EF"
+        android:onClick="borrarTodo"
+        android:src="@drawable/gomaborrar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
