--- a/app/src/main/res/layout/activity_main_user.xml
+++ b/app/src/main/res/layout/activity_main_user.xml
@@ -4,39 +4,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivityMenu"
-    android:background="@drawable/espac">
+    android:background="@drawable/espac"
+    android:fadingEdge="horizontal|none"
+    tools:context=".MainActivityMenu">
 
     <ImageButton
-        android:id="@+id/imageButton2"
+        android:id="@+id/monumentosButton"
         android:layout_width="95dp"
         android:layout_height="80dp"
         android:layout_marginTop="200dp"
-        android:background="#FFFFFF"
+        android:background="#806DB8B5"
+        android:contentDescription="@string/nulo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        app:srcCompat="@drawable/piramides" />
+        app:srcCompat="@drawable/piramides"
+        tools:ignore="DuplicateSpeakableTextCheck" />
 
     <ImageButton
         android:id="@+id/imageButton3"
         android:layout_width="87dp"
         android:layout_height="80dp"
         android:layout_marginStart="16dp"
-        android:background="#FFFFFF"
-        app:layout_constraintStart_toEndOf="@+id/imageButton2"
-        app:layout_constraintTop_toTopOf="@+id/imageButton2"
+        android:background="#806DB8B5"
+        android:contentDescription="@string/nulo"
+        app:layout_constraintStart_toEndOf="@+id/monumentosButton"
+        app:layout_constraintTop_toTopOf="@+id/monumentosButton"
         app:srcCompat="@drawable/espana" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="343dp"
-        android:layout_height="134dp"
+        android:layout_width="0dp"
+        android:layout_height="126dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
+        android:layout_marginEnd="32dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView10"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
@@ -44,7 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="NOMBRE:"
+            android:text="@string/astronauta"
             android:textColor="#FBFAFA"
             android:textSize="36sp"
             android:textStyle="bold|italic" />
@@ -54,17 +59,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Puntos:"
+            android:text="@string/puntos"
             android:textColor="#FFFFFF"
             android:textSize="24sp"
             android:textStyle="bold|italic" />
 
-        <EditText
-            android:id="@+id/editTextNumber"
+        <TextView
+            android:id="@+id/textViewPuntos"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="number" />
+            android:layout_height="44dp" />
 
 
     </LinearLayout>
@@ -74,18 +77,19 @@
         android:layout_width="87dp"
         android:layout_height="80dp"
         android:layout_marginEnd="16dp"
-        android:background="#FFFFFF"
-        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
-        app:layout_constraintTop_toTopOf="@+id/imageButton2"
+        android:background="#806DB8B5"
+        android:contentDescription="@string/nulo"
+        app:layout_constraintEnd_toStartOf="@+id/monumentosButton"
+        app:layout_constraintTop_toTopOf="@+id/monumentosButton"
         app:srcCompat="@drawable/europa" />
 
     <TextView
         android:id="@+id/textView9"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="#FFFFFF"
+        android:background="#806DB8B5"
         android:gravity="center"
-        android:text="Europa"
+        android:text="@string/europa"
         android:textColor="#040202"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -97,23 +101,23 @@
         android:id="@+id/textView"
         android:layout_width="0dp"
         android:layout_height="25dp"
-        android:background="#FFFFFF"
+        android:background="#806DB8B5"
         android:gravity="center"
-        android:text="Monumentos"
+        android:text="@string/monumentos"
         android:textColor="#0B0808"
         android:textSize="14sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/imageButton2"
-        app:layout_constraintStart_toStartOf="@+id/imageButton2"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton2" />
+        app:layout_constraintEnd_toEndOf="@+id/monumentosButton"
+        app:layout_constraintStart_toStartOf="@+id/monumentosButton"
+        app:layout_constraintTop_toBottomOf="@+id/monumentosButton" />
 
     <TextView
         android:id="@+id/textView11"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="#FFFFFF"
+        android:background="#806DB8B5"
         android:gravity="center"
-        android:text="España"
+        android:text="@string/espa_a"
         android:textColor="#070606"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -122,13 +126,11 @@
         app:layout_constraintTop_toBottomOf="@+id/imageButton3" />
 
     <ImageButton
-        android:id="@+id/imageButton5"
+        android:id="@+id/usersButton"
         android:layout_width="87dp"
         android:layout_height="80dp"
-        android:layout_marginEnd="16dp"
-        android:background="#FFFFFF"
-        app:layout_constraintEnd_toStartOf="@+id/imageButton6"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:background="#806DB8B5"
+        android:contentDescription="@string/nulo"
         app:layout_constraintStart_toStartOf="@+id/imageButton4"
         app:layout_constraintTop_toTopOf="@+id/imageButton6"
         app:srcCompat="@drawable/globo" />
@@ -137,22 +139,23 @@
         android:id="@+id/textView12"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="#FFFFFF"
+        android:background="#806DB8B5"
         android:gravity="center"
-        android:text="General"
+        android:text="@string/usuarios"
         android:textColor="#0B0808"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/imageButton5"
-        app:layout_constraintStart_toStartOf="@+id/imageButton5"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton5" />
+        app:layout_constraintEnd_toEndOf="@+id/usersButton"
+        app:layout_constraintStart_toStartOf="@+id/usersButton"
+        app:layout_constraintTop_toBottomOf="@+id/usersButton" />
 
     <ImageButton
         android:id="@+id/imageButton6"
         android:layout_width="87dp"
         android:layout_height="80dp"
         android:layout_marginTop="24dp"
-        android:background="#FFFFFF"
+        android:background="#806DB8B5"
+        android:contentDescription="@string/nulo"
         app:layout_constraintEnd_toEndOf="@+id/imageButton3"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:srcCompat="@drawable/paisaje" />
@@ -161,9 +164,9 @@
         android:id="@+id/textView13"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="#FFFFFF"
+        android:background="#806DB8B5"
         android:gravity="center"
-        android:text="Narural"
+        android:text="@string/natural"
         android:textColor="#0E0D0D"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -177,10 +180,86 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
+        android:contentDescription="@string/nulo"
         android:onClick="dialog"
-        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
+        app:layout_constraintBottom_toTopOf="@+id/monumentosButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/walkie" />
+
+    <ImageButton
+        android:id="@+id/preguntaButton"
+        android:layout_width="87dp"
+        android:layout_height="80dp"
+        android:background="#806DB8B5"
+        android:contentDescription="@string/nulo"
+        app:layout_constraintBottom_toTopOf="@+id/textView12"
+        app:layout_constraintEnd_toStartOf="@+id/imageButton6"
+        app:layout_constraintStart_toEndOf="@+id/usersButton"
+        app:layout_constraintTop_toTopOf="@+id/usersButton"
+        app:srcCompat="@drawable/bombilla" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="#806DB8B5"
+        android:gravity="center"
+        android:text="@string/a_adir"
+        android:textColor="#090505"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="@+id/preguntaButton"
+        app:layout_constraintStart_toStartOf="@+id/preguntaButton"
+        app:layout_constraintTop_toBottomOf="@+id/preguntaButton"
+        tools:textStyle="bold" />
+
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/le" />
+
+    <Switch
+        android:id="@+id/switchDificultad"
+        android:layout_width="53dp"
+        android:layout_height="64dp"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
+        app:layout_constraintStart_toEndOf="@+id/imageView6"
+        app:layout_constraintTop_toTopOf="@+id/imageView6" />
+
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/switchDificultad"
+        app:layout_constraintStart_toEndOf="@+id/switchDificultad"
+        app:layout_constraintTop_toTopOf="@+id/switchDificultad"
+        app:srcCompat="@drawable/led" />
+
+    <ImageButton
+        android:id="@+id/reinicioButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:background="#00FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/grabacion" />
+
+    <ImageView
+        android:id="@+id/imageView10"
+        android:layout_width="75dp"
+        android:layout_height="87dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="39dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/astronauta" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
