--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,7 @@
             android:hint="@string/email"
             android:inputType="textEmailAddress"
             android:minHeight="48dp"
-            android:autofillHints="" />
+            android:importantForAutofill="no" />
 
         <EditText
             android:id="@+id/passwordEditText"
@@ -75,8 +75,7 @@
             android:ems="10"
             android:hint="@string/contrase_a"
             android:inputType="textPassword"
-            android:minHeight="48dp"
-            android:autofillHints=""/>
+            android:minHeight="48dp" />
 
         <Space
             android:layout_width="match_parent"
@@ -94,8 +93,8 @@
                 android:layout_weight="1"
                 android:background="#FF5722"
                 android:text="@string/registrar"
-                android:textColor="#FDFDFD"
-                tools:ignore="TouchTargetSizeCheck" />
+                android:textColor="#F3EDED"
+                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
 
             <Space
                 android:layout_width="8dp"
