--- a/app/src/main/res/layout/activity_main_user.xml
+++ b/app/src/main/res/layout/activity_main_user.xml
@@ -67,7 +67,12 @@
         <TextView
             android:id="@+id/textViewPuntos"
             android:layout_width="match_parent"
-            android:layout_height="44dp" />
+            android:layout_height="44dp"
+            android:gravity="center"
+            android:text="0"
+            android:textColor="#F6F5F5"
+            android:textSize="34sp"
+            android:textStyle="bold" />
 
 
     </LinearLayout>
@@ -158,7 +163,7 @@
         android:contentDescription="@string/nulo"
         app:layout_constraintEnd_toEndOf="@+id/imageButton3"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:srcCompat="@drawable/paisaje" />
+        app:srcCompat="@drawable/estatua" />
 
     <TextView
         android:id="@+id/textView13"
@@ -166,7 +171,7 @@
         android:layout_height="wrap_content"
         android:background="#806DB8B5"
         android:gravity="center"
-        android:text="@string/natural"
+        android:text="EE.UU"
         android:textColor="#0E0D0D"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -205,13 +210,13 @@
         android:layout_height="wrap_content"
         android:background="#806DB8B5"
         android:gravity="center"
-        android:text="@string/a_adir"
+        android:text="Mis preg."
         android:textColor="#090505"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/preguntaButton"
         app:layout_constraintStart_toStartOf="@+id/preguntaButton"
-        app:layout_constraintTop_toBottomOf="@+id/preguntaButton"
-        tools:textStyle="bold" />
+        app:layout_constraintTop_toBottomOf="@+id/preguntaButton" />
 
     <ImageView
         android:id="@+id/imageView6"
