--- a/app/src/main/res/anim/dedo.xml
+++ b/app/src/main/res/anim/dedo.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
-    <rotate
-        android:fromDegrees="0"
-        android:toDegrees="-25"
-        android:toYScale="0.0"
-        android:pivotX="50%"
-        android:pivotY="50%"
+
+    <translate
+        android:fromXDelta="0"
+        android:toXDelta="80%"
+        android:fromYDelta="0"
+        android:toYDelta="0"
         android:startOffset="700"
         android:duration="900"
         android:repeatCount="infinite" />
+
 </set>
