--- a/app/src/main/res/layout/activity_main_fragments_map.xml
+++ b/app/src/main/res/layout/activity_main_fragments_map.xml
@@ -16,7 +16,7 @@
 
         <TextView
             android:id="@+id/preguntaEdit"
-            android:layout_width="405dp"
+            android:layout_width="0dp"
             android:layout_height="59dp"
             android:background="#E91E63"
             android:gravity="center"
@@ -79,16 +79,29 @@
         app:layout_constraintEnd_toEndOf="parent"
         tools:ignore="TextContrastCheck" />
 
-    <ImageButton
-        android:id="@+id/imageButtonAtras"
+    <TextView
+        android:id="@+id/textViewContador"
+        android:layout_width="56dp"
+        android:layout_height="47dp"
+        android:layout_marginBottom="16dp"
+        android:background="#72292121"
+        android:gravity="center"
+        android:hint="@string/_0"
+        android:textColor="#FDFBFB"
+        android:textSize="34sp"
+        app:layout_constraintBottom_toBottomOf="@+id/map"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/atras"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="#4CAF50"
-        android:src="@drawable/ic_baseline_subdirectory_arrow_left_24"
+        android:text="volver"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/buttonSiguiente"
-        app:layout_constraintHorizontal_bias="0.475"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/buttonSiguiente" />
+        app:layout_constraintTop_toBottomOf="@+id/map" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
