--- a/app/src/main/res/layout/activity_main_user.xml
+++ b/app/src/main/res/layout/activity_main_user.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/espac"
     android:fadingEdge="horizontal|none"
     tools:context=".MainActivityMenu">
 
@@ -22,7 +21,7 @@
         tools:ignore="DuplicateSpeakableTextCheck" />
 
     <ImageButton
-        android:id="@+id/imageButton3"
+        android:id="@+id/imageButtonEspaña"
         android:layout_width="87dp"
         android:layout_height="80dp"
         android:layout_marginStart="16dp"
@@ -30,55 +29,156 @@
         android:contentDescription="@string/nulo"
         app:layout_constraintStart_toEndOf="@+id/monumentosButton"
         app:layout_constraintTop_toTopOf="@+id/monumentosButton"
-        app:srcCompat="@drawable/espana" />
+        app:srcCompat="@drawable/espana"
+        tools:ignore="ImageContrastCheck" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="0dp"
-        android:layout_height="126dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="32dp"
-        android:orientation="vertical"
+        android:layout_width="353dp"
+        android:layout_height="151dp"
+        android:background="#F8F8F8"
+        android:orientation="horizontal"
+        android:padding="5dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView10"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView5">
 
-        <TextView
-            android:id="@+id/textUser"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/astronauta"
-            android:textColor="#FBFAFA"
-            android:textSize="36sp"
-            android:textStyle="bold|italic" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/puntos"
-            android:textColor="#FFFFFF"
-            android:textSize="24sp"
-            android:textStyle="bold|italic" />
+            <LinearLayout
+                android:layout_width="90dp"
+                android:layout_height="match_parent"
+                android:background="#00BCD4"
+                android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textViewPuntos"
+                <ImageView
+                    android:id="@+id/imageView10"
+                    android:layout_width="match_parent"
+                    android:layout_height="98dp"
+                    android:contentDescription="@string/todoSCA"
+                    app:srcCompat="@drawable/astronauta" />
+
+                <ImageView
+                    android:id="@+id/imageView3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/codigo" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="44dp"
-            android:gravity="center"
-            android:text="0"
-            android:textColor="#F6F5F5"
-            android:textSize="34sp"
-            android:textStyle="bold" />
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#3F51B5"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView10"
+                        android:layout_width="196dp"
+                        android:layout_height="match_parent"
+                        android:gravity="center|left"
+                        android:text="  ASTRONAUTA"
+                        android:textColor="#FFFFFF"
+                        android:textSize="16sp"
+                        android:textStyle="bold|italic" />
+
+                    <TextView
+                        android:id="@+id/textView13"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="N.A.S"
+                        android:textSize="20sp" />
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/textUser"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="left"
+                    android:text="   Nombre:"
+                    android:textColor="#F2F4F0"
+                    android:textSize="20sp"
+                    android:textStyle="bold|italic" />
+
+                <TextView
+                    android:id="@+id/textView11"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text=" codigo: 123344555555666" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:text=" Puntos:"
+                        android:textColor="#FFFFFF"
+                        android:textSize="20sp"
+                        android:textStyle="bold|italic" />
+
+                    <TextView
+                        android:id="@+id/textViewPuntos"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="@string/_0"
+                        android:textColor="#F6F5F5"
+                        android:textSize="24sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView12"
+                        android:layout_width="191dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center|left"
+                        android:text=" Rango: Comandante"
+                        android:textSize="16sp"
+                        android:textStyle="italic" />
+
+                    <ImageView
+                        android:id="@+id/imageView11"
+                        android:layout_width="46dp"
+                        android:layout_height="35dp"
+                        app:srcCompat="@drawable/chip" />
+                </LinearLayout>
+
+            </LinearLayout>
+        </LinearLayout>
 
 
     </LinearLayout>
 
     <ImageButton
-        android:id="@+id/imageButton4"
+        android:id="@+id/imageButtonEuropa"
         android:layout_width="87dp"
         android:layout_height="80dp"
         android:layout_marginEnd="16dp"
@@ -86,137 +186,43 @@
         android:contentDescription="@string/nulo"
         app:layout_constraintEnd_toStartOf="@+id/monumentosButton"
         app:layout_constraintTop_toTopOf="@+id/monumentosButton"
-        app:srcCompat="@drawable/europa" />
-
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="#806DB8B5"
-        android:gravity="center"
-        android:text="@string/europa"
-        android:textColor="#040202"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/imageButton4"
-        app:layout_constraintStart_toStartOf="@+id/imageButton4"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton4" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="0dp"
-        android:layout_height="25dp"
-        android:background="#806DB8B5"
-        android:gravity="center"
-        android:text="@string/monumentos"
-        android:textColor="#0B0808"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/monumentosButton"
-        app:layout_constraintStart_toStartOf="@+id/monumentosButton"
-        app:layout_constraintTop_toBottomOf="@+id/monumentosButton" />
-
-    <TextView
-        android:id="@+id/textView11"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="#806DB8B5"
-        android:gravity="center"
-        android:text="@string/espa_a"
-        android:textColor="#070606"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/imageButton3"
-        app:layout_constraintStart_toStartOf="@+id/imageButton3"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton3" />
+        app:srcCompat="@drawable/europa"
+        tools:ignore="ImageContrastCheck" />
 
     <ImageButton
-        android:id="@+id/usersButton"
+        android:id="@+id/imageButtonAleatorio"
         android:layout_width="87dp"
         android:layout_height="80dp"
+        android:layout_marginTop="16dp"
         android:background="#806DB8B5"
         android:contentDescription="@string/nulo"
-        app:layout_constraintStart_toStartOf="@+id/imageButton4"
-        app:layout_constraintTop_toTopOf="@+id/imageButton6"
+        app:layout_constraintStart_toStartOf="@+id/imageButtonEuropa"
+        app:layout_constraintTop_toBottomOf="@+id/imageButtonEuropa"
         app:srcCompat="@drawable/globo" />
 
-    <TextView
-        android:id="@+id/textView12"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="#806DB8B5"
-        android:gravity="center"
-        android:text="@string/usuarios"
-        android:textColor="#0B0808"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/usersButton"
-        app:layout_constraintStart_toStartOf="@+id/usersButton"
-        app:layout_constraintTop_toBottomOf="@+id/usersButton" />
-
     <ImageButton
-        android:id="@+id/imageButton6"
+        android:id="@+id/imageButtonEeuu"
         android:layout_width="87dp"
         android:layout_height="80dp"
-        android:layout_marginTop="24dp"
         android:background="#806DB8B5"
         android:contentDescription="@string/nulo"
-        app:layout_constraintEnd_toEndOf="@+id/imageButton3"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintEnd_toEndOf="@+id/imageButtonEspaña"
+        app:layout_constraintStart_toStartOf="@+id/imageButtonEspaña"
+        app:layout_constraintTop_toTopOf="@+id/imageButtonAleatorio"
         app:srcCompat="@drawable/estatua" />
-
-    <TextView
-        android:id="@+id/textView13"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="#806DB8B5"
-        android:gravity="center"
-        android:text="EE.UU"
-        android:textColor="#0E0D0D"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/imageButton6"
-        app:layout_constraintHorizontal_bias="0.433"
-        app:layout_constraintStart_toStartOf="@+id/imageButton6"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton6" />
 
     <ImageView
         android:id="@+id/radio"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
+        android:layout_width="135dp"
+        android:layout_height="133dp"
+        android:layout_marginBottom="36dp"
         android:contentDescription="@string/nulo"
         android:onClick="dialog"
         app:layout_constraintBottom_toTopOf="@+id/monumentosButton"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/walkie" />
-
-    <ImageButton
-        android:id="@+id/preguntaButton"
-        android:layout_width="87dp"
-        android:layout_height="80dp"
-        android:background="#806DB8B5"
-        android:contentDescription="@string/nulo"
-        app:layout_constraintBottom_toTopOf="@+id/textView12"
-        app:layout_constraintEnd_toStartOf="@+id/imageButton6"
-        app:layout_constraintStart_toEndOf="@+id/usersButton"
-        app:layout_constraintTop_toTopOf="@+id/usersButton"
-        app:srcCompat="@drawable/bombilla" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="#806DB8B5"
-        android:gravity="center"
-        android:text="Mis preg."
-        android:textColor="#090505"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/preguntaButton"
-        app:layout_constraintStart_toStartOf="@+id/preguntaButton"
-        app:layout_constraintTop_toBottomOf="@+id/preguntaButton" />
 
     <ImageView
         android:id="@+id/imageView6"
@@ -226,7 +232,8 @@
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/le" />
+        app:srcCompat="@drawable/le"
+        android:contentDescription="@string/todoSCAVC" />
 
     <Switch
         android:id="@+id/switchDificultad"
@@ -235,7 +242,8 @@
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="@+id/imageView6"
         app:layout_constraintStart_toEndOf="@+id/imageView6"
-        app:layout_constraintTop_toTopOf="@+id/imageView6" />
+        app:layout_constraintTop_toTopOf="@+id/imageView6"
+        />
 
     <ImageView
         android:id="@+id/imageView7"
@@ -244,7 +252,8 @@
         app:layout_constraintBottom_toBottomOf="@+id/switchDificultad"
         app:layout_constraintStart_toEndOf="@+id/switchDificultad"
         app:layout_constraintTop_toTopOf="@+id/switchDificultad"
-        app:srcCompat="@drawable/led" />
+        app:srcCompat="@drawable/led"
+        android:contentDescription="@string/todoK" />
 
     <ImageButton
         android:id="@+id/reinicioButton"
@@ -253,18 +262,57 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:background="#00FFFFFF"
+        android:contentDescription="@string/tod"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/grabacion" />
 
+    <ImageButton
+        android:id="@+id/imageButtonUser"
+        android:layout_width="87dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="16dp"
+        android:background="#806DB8B5"
+        android:contentDescription="@string/UU"
+        app:layout_constraintEnd_toEndOf="@+id/monumentosButton"
+        app:layout_constraintStart_toStartOf="@+id/monumentosButton"
+        app:layout_constraintTop_toBottomOf="@+id/monumentosButton"
+        app:srcCompat="@drawable/hombre"
+        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />
+
+    <ImageButton
+        android:id="@+id/imageButtonNotas"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:background="#00FFFFFF"
+        app:layout_constraintBottom_toBottomOf="@+id/reinicioButton"
+        app:layout_constraintEnd_toStartOf="@+id/reinicioButton"
+        app:layout_constraintTop_toTopOf="@+id/reinicioButton"
+        app:layout_constraintVertical_bias="0.473"
+        app:srcCompat="@drawable/lapiz"
+        tools:ignore="SpeakableTextPresentCheck"
+        android:contentDescription="@string/todoUU" />
+
     <ImageView
-        android:id="@+id/imageView10"
-        android:layout_width="75dp"
-        android:layout_height="87dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="39dp"
+        android:id="@+id/dedo"
+        android:layout_width="63dp"
+        android:layout_height="67dp"
+        android:layout_marginTop="96dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.287"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        app:srcCompat="@drawable/dedos"
+        android:contentDescription="@string/todoSCAC" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/astronauta" />
+        app:srcCompat="@drawable/clip" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
