--- a/app/src/main/res/layout/activity_maps_pregunta.xml
+++ b/app/src/main/res/layout/activity_maps_pregunta.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MapsActivityPregunta">
 
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="411dp"
@@ -23,7 +23,8 @@
         android:layout_width="0dp"
         android:layout_height="53dp"
         android:gravity="center"
-        android:hint="Escribe tu pregunta AQUI!"
+        android:hint="@string/escribe_tu_pregunta_aqui"
+        android:importantForAutofill="no"
         android:textColor="#F6F1F1"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,7 +36,7 @@
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:gravity="center"
-        android:text="MARCA LA UBICACION EN EL MAPA"
+        android:text="@string/marca_la_ubicacion_en_el_mapa"
         android:textColor="#FDFCFC"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -53,25 +54,25 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <Button
-            android:id="@+id/button3"
-            android:layout_width="258dp"
-            android:layout_height="63dp"
-            android:background="#8BC34A"
-            android:onClick="onClick"
-            android:text="Guardar"
-            android:textColor="#37474F"
-            android:textSize="18sp" />
-
-        <Button
-            android:id="@+id/button6"
+            android:id="@+id/buttonback"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#2196F3"
+            android:background="#9C27B0"
             android:onClick="salir"
-            android:text="salir"
-            android:textColor="#212121"
+            android:text="volver"
+            android:textSize="16sp" />
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="258dp"
+            android:layout_height="63dp"
+            android:background="#417504"
+            android:onClick="onClick"
+            android:text="@string/guardar"
+            android:textColor="#F5F9FB"
             android:textSize="18sp" />
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
